tests/example_policies/withIpBlock/withIpBlock-networkpolicy4.yaml
 ## Second policy - enables access to pods in kube-system with tier frontend can be accessed only by pods from namespace vendor-system

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: enable-from-many_ipBlocks-to-isolated-by-tier
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      tier: frontend
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 49.50.0.0/32
    - ipBlock:
        cidr: 49.50.0.2/32
    - ipBlock:
        cidr: 49.50.0.4/32
    - ipBlock:
        cidr: 49.50.0.6/32
    - ipBlock:
        cidr: 49.50.0.8/32
    - ipBlock:
        cidr: 49.50.0.10/32
    - ipBlock:
        cidr: 49.50.0.12/32
    - ipBlock:
        cidr: 49.50.0.14/32
    - ipBlock:
        cidr: 49.50.0.16/32
    - ipBlock:
        cidr: 50.0.0.0/8
    - ipBlock:
        cidr: 49.50.0.18/32
    - ipBlock:
        cidr: 49.50.0.20/32
    - ipBlock:
        cidr: 49.50.0.22/32
    - ipBlock:
        cidr: 49.50.0.24/32
    - ipBlock:
        cidr: 49.50.0.26/32
    - ipBlock:
        cidr: 49.50.0.28/32
    - ipBlock:
        cidr: 49.50.0.30/32
    - ipBlock:
        cidr: 49.50.0.32/32
    - ipBlock:
        cidr: 49.50.0.34/32
    - ipBlock:
        cidr: 49.50.0.36/32
    - ipBlock:
        cidr: 49.50.0.38/32
    - ipBlock:
        cidr: 49.50.0.40/32
    - ipBlock:
        cidr: 49.50.0.42/32
    - ipBlock:
        cidr: 49.50.0.44/32
    - ipBlock:
        cidr: 49.50.0.46/32
    - ipBlock:
        cidr: 49.50.0.48/32
    - ipBlock:
        cidr: 49.50.0.50/32
    - ipBlock:
        cidr: 49.50.0.52/32
    - ipBlock:
        cidr: 49.50.0.54/32
    - ipBlock:
        cidr: 49.50.0.56/32
    - ipBlock:
        cidr: 49.50.0.58/32
    - ipBlock:
        cidr: 49.50.0.60/32
    - ipBlock:
        cidr: 49.50.0.62/32
    - ipBlock:
        cidr: 49.50.0.64/32
    - ipBlock:
        cidr: 49.50.0.66/32
    - ipBlock:
        cidr: 49.50.0.68/32
    - ipBlock:
        cidr: 49.50.0.70/32
    - ipBlock:
        cidr: 49.50.0.72/32
    - ipBlock:
        cidr: 49.50.0.74/32
    - ipBlock:
        cidr: 49.50.0.76/32
    - ipBlock:
        cidr: 49.50.0.78/32
    - ipBlock:
        cidr: 49.50.0.80/32
    - ipBlock:
        cidr: 49.50.0.82/32
    - ipBlock:
        cidr: 49.50.0.84/32
    - ipBlock:
        cidr: 49.50.0.86/32
    - ipBlock:
        cidr: 49.50.0.88/32
    - ipBlock:
        cidr: 49.50.0.90/32
    - ipBlock:
        cidr: 49.50.0.92/32
    - ipBlock:
        cidr: 49.50.0.94/32
    - ipBlock:
        cidr: 49.50.0.96/32
    - ipBlock:
        cidr: 49.50.0.98/32
    - ipBlock:
        cidr: 49.50.0.100/32
    - ipBlock:
        cidr: 49.50.0.102/32
    - ipBlock:
        cidr: 49.50.0.104/32
    - ipBlock:
        cidr: 49.50.0.106/32
    - ipBlock:
        cidr: 49.50.0.108/32
    - ipBlock:
        cidr: 49.50.0.110/32
    - ipBlock:
        cidr: 49.50.0.112/32
    - ipBlock:
        cidr: 51.0.0.0/28
    - ipBlock:
        cidr: 52.0.0.0/28
    - ipBlock:
        cidr: 53.0.0.0/28
    - ipBlock:
        cidr: 54.0.0.0/27
    - ipBlock:
        cidr: 55.0.0.0/27
    - ipBlock:
        cidr: 56.0.0.0/27
    - ipBlock:
        cidr: 57.0.0.0/27
    - ipBlock:
        cidr: 58.0.0.0/28
    - ipBlock:
        cidr: 59.0.0.0/28
    - ipBlock:
        cidr: 60.0.0.0/27
    - ipBlock:
        cidr: 61.0.0.0/27
    - ipBlock:
        cidr: 62.0.0.0/29
    - ipBlock:
        cidr: 63.0.0.0/29
    - ipBlock:
        cidr: 64.0.0.0/29
    - ipBlock:
        cidr: 49.50.0.114/32
    - ipBlock:
        cidr: 49.50.0.116/32
    - ipBlock:
        cidr: 49.50.0.118/32
    - ipBlock:
        cidr: 49.50.0.120/32
    - ipBlock:
        cidr: 49.50.0.122/32
    - ipBlock:
        cidr: 49.50.0.124/32
    - ipBlock:
        cidr: 49.50.0.126/32
    - ipBlock:
        cidr: 49.50.0.128/32
    - ipBlock:
        cidr: 49.50.0.130/32
    - ipBlock:
        cidr: 49.50.0.132/32
    - ipBlock:
        cidr: 49.50.0.134/32
    - ipBlock:
        cidr: 49.50.0.136/32
    - ipBlock:
        cidr: 49.50.0.138/32
    - ipBlock:
        cidr: 49.50.0.140/32
    - ipBlock:
        cidr: 49.50.0.142/32
    - ipBlock:
        cidr: 49.50.0.144/32
    - ipBlock:
        cidr: 49.50.0.146/32
    - ipBlock:
        cidr: 49.50.0.148/32
    - ipBlock:
        cidr: 49.50.0.150/32
    - ipBlock:
        cidr: 49.50.0.152/32
    - ipBlock:
        cidr: 49.50.0.154/32
    - ipBlock:
        cidr: 49.50.0.156/32
    - ipBlock:
        cidr: 49.50.0.158/32
    - ipBlock:
        cidr: 49.50.0.160/32
    - ipBlock:
        cidr: 49.50.0.162/32
    - ipBlock:
        cidr: 49.50.0.164/32
    - ipBlock:
        cidr: 49.50.0.166/32
    - ipBlock:
        cidr: 49.50.0.168/32
    - ipBlock:
        cidr: 49.50.0.170/32
    - ipBlock:
        cidr: 49.50.0.172/32
    - ipBlock:
        cidr: 49.50.0.174/32
    - ipBlock:
        cidr: 49.50.0.176/32
    - ipBlock:
        cidr: 49.50.0.178/32
    - ipBlock:
        cidr: 49.50.0.180/32
    - ipBlock:
        cidr: 49.50.0.182/32
    - ipBlock:
        cidr: 49.50.0.184/32
    - ipBlock:
        cidr: 49.50.0.186/32
    - ipBlock:
        cidr: 49.50.0.188/32
    - ipBlock:
        cidr: 49.50.0.190/32
    - ipBlock:
        cidr: 49.50.0.192/32
    - ipBlock:
        cidr: 49.50.0.194/32
    - ipBlock:
        cidr: 49.50.0.196/32
    - ipBlock:
        cidr: 49.50.0.198/32
    - ipBlock:
        cidr: 65.0.0.0/23
    - ipBlock:
        cidr: 66.0.0.0/23
    - ipBlock:
        cidr: 67.0.0.0/23
    - ipBlock:
        cidr: 68.0.0.0/23
    - ipBlock:
        cidr: 69.0.0.0/24
    - ipBlock:
        cidr: 70.0.0.0/23
    - ipBlock:
        cidr: 71.0.0.0/23
    - ipBlock:
        cidr: 72.0.0.0/23
    - ipBlock:
        cidr: 73.0.0.0/23
    - ipBlock:
        cidr: 74.0.0.0/23
    - ipBlock:
        cidr: 75.0.0.0/24
    - ipBlock:
        cidr: 76.0.0.0/23
    - ipBlock:
        cidr: 77.0.0.0/23
    - ipBlock:
        cidr: 78.0.0.0/23
    - ipBlock:
        cidr: 79.0.0.0/24
    - ipBlock:
        cidr: 80.0.0.0/24
    - ipBlock:
        cidr: 81.0.0.0/24
    - ipBlock:
        cidr: 82.0.0.0/24
    - ipBlock:
        cidr: 83.0.0.0/24
    - ipBlock:
        cidr: 84.0.0.0/24
    - ipBlock:
        cidr: 85.0.0.0/24
    - ipBlock:
        cidr: 86.0.0.0/24
    - ipBlock:
        cidr: 87.0.0.0/24
    - ipBlock:
        cidr: 88.0.0.0/24
    - ipBlock:
        cidr: 89.0.0.0/24
    - ipBlock:
        cidr: 90.0.0.0/24
    - ipBlock:
        cidr: 91.0.0.0/24
    - ipBlock:
        cidr: 92.0.0.0/24
    - ipBlock:
        cidr: 93.0.0.0/24
    - ipBlock:
        cidr: 94.0.0.0/24
    - ipBlock:
        cidr: 95.0.0.0/24
    - ipBlock:
        cidr: 96.0.0.0/24
    - ipBlock:
        cidr: 97.0.0.0/24
    - ipBlock:
        cidr: 98.0.0.0/24
    - ipBlock:
        cidr: 99.0.0.0/24
    - ipBlock:
        cidr: 100.0.0.0/24
    - ipBlock:
        cidr: 101.0.0.0/24
    - ipBlock:
        cidr: 102.0.0.0/24
    - ipBlock:
        cidr: 103.0.0.0/24
    - ipBlock:
        cidr: 104.0.0.0/24
    - ipBlock:
        cidr: 105.0.0.0/24
    - ipBlock:
        cidr: 106.0.0.0/24
    - ipBlock:
        cidr: 49.50.0.200/32
    - ipBlock:
        cidr: 49.50.0.202/32
    - ipBlock:
        cidr: 107.0.0.0/16
    - ipBlock:
        cidr: 108.0.0.0/19
    - ipBlock:
        cidr: 109.0.0.0/20
    - ipBlock:
        cidr: 110.0.0.0/24
    - ipBlock:
        cidr: 111.0.0.0/20
    - ipBlock:
        cidr: 112.0.0.0/20
    - ipBlock:
        cidr: 113.0.0.0/20
    - ipBlock:
        cidr: 114.0.0.0/20
    - ipBlock:
        cidr: 115.0.0.0/20
    - ipBlock:
        cidr: 116.0.0.0/20
    - ipBlock:
        cidr: 117.0.0.0/20
    - ipBlock:
        cidr: 118.0.0.0/20
    - ipBlock:
        cidr: 119.0.0.0/20
    - ipBlock:
        cidr: 120.0.0.0/20
    - ipBlock:
        cidr: 121.0.0.0/20
    - ipBlock:
        cidr: 122.0.0.0/20
    - ipBlock:
        cidr: 123.0.0.0/20
    - ipBlock:
        cidr: 124.0.0.0/20
    - ipBlock:
        cidr: 125.0.0.0/20
    - ipBlock:
        cidr: 126.0.0.0/23
    - ipBlock:
        cidr: 127.0.0.0/24
    - ipBlock:
        cidr: 128.0.0.0/22
    - ipBlock:
        cidr: 129.0.0.0/22
    - ipBlock:
        cidr: 130.0.0.0/24
    - ipBlock:
        cidr: 131.0.0.0/24
    - ipBlock:
        cidr: 132.0.0.0/24
    - ipBlock:
        cidr: 133.0.0.0/24
    - ipBlock:
        cidr: 134.0.0.0/24
    - ipBlock:
        cidr: 135.0.0.0/24
    - ipBlock:
        cidr: 136.0.0.0/24
    - ipBlock:
        cidr: 137.0.0.0/24
    - ipBlock:
        cidr: 138.0.0.0/24
    - ipBlock:
        cidr: 139.0.0.0/22
    - ipBlock:
        cidr: 49.50.0.204/32
    - ipBlock:
        cidr: 49.50.0.206/32
    - ipBlock:
        cidr: 49.50.0.208/32
    - ipBlock:
        cidr: 49.50.0.210/32
    - ipBlock:
        cidr: 49.50.0.212/32
    - ipBlock:
        cidr: 49.50.0.214/32
    - ipBlock:
        cidr: 49.50.0.216/32
    - ipBlock:
        cidr: 49.50.0.218/32
    - ipBlock:
        cidr: 49.50.0.220/32
    - ipBlock:
        cidr: 140.0.0.0/30
    - ipBlock:
        cidr: 141.0.0.0/30
    - ipBlock:
        cidr: 49.50.0.222/32
    - ipBlock:
        cidr: 142.0.0.0/30
    - ipBlock:
        cidr: 143.0.0.0/30
    - ipBlock:
        cidr: 144.0.0.0/31
    - ipBlock:
        cidr: 49.50.0.224/32
    - ipBlock:
        cidr: 49.50.0.226/32
    - ipBlock:
        cidr: 49.50.0.228/32
    - ipBlock:
        cidr: 49.50.0.230/32
    - ipBlock:
        cidr: 49.50.0.232/32
    - ipBlock:
        cidr: 49.50.0.234/32
    - ipBlock:
        cidr: 49.50.0.236/32
    - ipBlock:
        cidr: 49.50.0.238/32
    - ipBlock:
        cidr: 49.50.0.240/32
    - ipBlock:
        cidr: 49.50.0.242/32
    - ipBlock:
        cidr: 49.50.0.244/32
    - ipBlock:
        cidr: 49.50.0.246/32
    - ipBlock:
        cidr: 49.50.0.248/32
    - ipBlock:
        cidr: 49.50.0.250/32
    - ipBlock:
        cidr: 49.50.0.252/32
    - ipBlock:
        cidr: 49.50.0.254/32
    - ipBlock:
        cidr: 49.50.1.0/32
    - ipBlock:
        cidr: 49.50.1.2/32
    - ipBlock:
        cidr: 49.50.1.4/32
    - ipBlock:
        cidr: 49.50.1.6/32
    - ipBlock:
        cidr: 49.50.1.8/32
    - ipBlock:
        cidr: 49.50.1.10/32
    - ipBlock:
        cidr: 49.50.1.12/32
    - ipBlock:
        cidr: 49.50.1.14/32
    - ipBlock:
        cidr: 49.50.1.16/32
    - ipBlock:
        cidr: 49.50.1.18/32
    - ipBlock:
        cidr: 49.50.1.20/32
    - ipBlock:
        cidr: 49.50.1.22/32
    - ipBlock:
        cidr: 49.50.1.24/32
    - ipBlock:
        cidr: 49.50.1.26/32
    - ipBlock:
        cidr: 49.50.1.28/32
    - ipBlock:
        cidr: 49.50.1.30/32
    - ipBlock:
        cidr: 49.50.1.32/32
    - ipBlock:
        cidr: 49.50.1.34/32
    - ipBlock:
        cidr: 49.50.1.36/32
    - ipBlock:
        cidr: 49.50.1.38/32
    - ipBlock:
        cidr: 49.50.1.40/32
    - ipBlock:
        cidr: 49.50.1.42/32
    - ipBlock:
        cidr: 49.50.1.44/32
    - ipBlock:
        cidr: 49.50.1.46/32
    - ipBlock:
        cidr: 49.50.1.48/32
    - ipBlock:
        cidr: 49.50.1.50/32
    - ipBlock:
        cidr: 49.50.1.52/32
    - ipBlock:
        cidr: 49.50.1.54/32
    - ipBlock:
        cidr: 49.50.1.56/32
    - ipBlock:
        cidr: 49.50.1.58/32
    - ipBlock:
        cidr: 49.50.1.60/32
    - ipBlock:
        cidr: 49.50.1.62/32
    - ipBlock:
        cidr: 49.50.1.64/32
    - ipBlock:
        cidr: 49.50.1.66/32
    - ipBlock:
        cidr: 49.50.1.68/32
    - ipBlock:
        cidr: 49.50.1.70/32
    - ipBlock:
        cidr: 49.50.1.72/32
    - ipBlock:
        cidr: 49.50.1.74/32
    - ipBlock:
        cidr: 49.50.1.76/32
    - ipBlock:
        cidr: 49.50.1.78/32
    - ipBlock:
        cidr: 49.50.1.80/32
    - ipBlock:
        cidr: 49.50.1.82/32
    - ipBlock:
        cidr: 49.50.1.84/32
    - ipBlock:
        cidr: 49.50.1.86/32
    - ipBlock:
        cidr: 49.50.1.88/32
    - ipBlock:
        cidr: 49.50.1.90/32
    - ipBlock:
        cidr: 49.50.1.92/32
    - ipBlock:
        cidr: 49.50.1.94/32
    - ipBlock:
        cidr: 49.50.1.96/32
    - ipBlock:
        cidr: 49.50.1.98/32
    - ipBlock:
        cidr: 49.50.1.100/32
    - ipBlock:
        cidr: 49.50.1.102/32
    - ipBlock:
        cidr: 49.50.1.104/32
    - ipBlock:
        cidr: 49.50.1.106/32
    - ipBlock:
        cidr: 49.50.1.108/32
    - ipBlock:
        cidr: 49.50.1.110/32
    - ipBlock:
        cidr: 49.50.1.112/32
    - ipBlock:
        cidr: 49.50.1.114/32
    - ipBlock:
        cidr: 49.50.1.116/32
    - ipBlock:
        cidr: 49.50.1.118/32
    - ipBlock:
        cidr: 49.50.1.120/32
    - ipBlock:
        cidr: 49.50.1.122/32
    - ipBlock:
        cidr: 49.50.1.124/32
    - ipBlock:
        cidr: 49.50.1.126/32
    - ipBlock:
        cidr: 49.50.1.128/32
    - ipBlock:
        cidr: 49.50.1.130/32
    - ipBlock:
        cidr: 49.50.1.132/32
    - ipBlock:
        cidr: 49.50.1.134/32
    - ipBlock:
        cidr: 49.50.1.136/32
    - ipBlock:
        cidr: 49.50.1.138/32
    - ipBlock:
        cidr: 49.50.1.140/32
    - ipBlock:
        cidr: 49.50.1.142/32
    - ipBlock:
        cidr: 49.50.1.144/32
    - ipBlock:
        cidr: 49.50.1.146/32
    - ipBlock:
        cidr: 49.50.1.148/32
    - ipBlock:
        cidr: 49.50.1.150/32
    - ipBlock:
        cidr: 49.50.1.152/32
    - ipBlock:
        cidr: 49.50.1.154/32
    - ipBlock:
        cidr: 49.50.1.156/32
    - ipBlock:
        cidr: 49.50.1.158/32
    - ipBlock:
        cidr: 49.50.1.160/32
    - ipBlock:
        cidr: 49.50.1.162/32
    - ipBlock:
        cidr: 49.50.1.164/32
    - ipBlock:
        cidr: 49.50.1.166/32
    - ipBlock:
        cidr: 49.50.1.168/32
    - ipBlock:
        cidr: 49.50.1.170/32
    - ipBlock:
        cidr: 49.50.1.172/32
    - ipBlock:
        cidr: 49.50.1.174/32
    - ipBlock:
        cidr: 49.50.1.176/32
    - ipBlock:
        cidr: 49.50.1.178/32
    - ipBlock:
        cidr: 49.50.1.180/32
    - ipBlock:
        cidr: 49.50.1.182/32
    - ipBlock:
        cidr: 49.50.1.184/32
    - ipBlock:
        cidr: 49.50.1.186/32
    - ipBlock:
        cidr: 49.50.1.188/32
    - ipBlock:
        cidr: 49.50.1.190/32
    - ipBlock:
        cidr: 49.50.1.192/32
    - ipBlock:
        cidr: 49.50.1.194/32
    - ipBlock:
        cidr: 49.50.1.196/32
    - ipBlock:
        cidr: 49.50.1.198/32
    - ipBlock:
        cidr: 49.50.1.200/32
    - ipBlock:
        cidr: 49.50.1.202/32
    - ipBlock:
        cidr: 49.50.1.204/32
    - ipBlock:
        cidr: 49.50.1.206/32
    - ipBlock:
        cidr: 49.50.1.208/32
    - ipBlock:
        cidr: 49.50.1.210/32
    - ipBlock:
        cidr: 49.50.1.212/32
    - ipBlock:
        cidr: 49.50.1.214/32
    - ipBlock:
        cidr: 49.50.1.216/32
    - ipBlock:
        cidr: 49.50.1.218/32
    - ipBlock:
        cidr: 49.50.1.220/32
    - ipBlock:
        cidr: 49.50.1.222/32
    - ipBlock:
        cidr: 49.50.1.224/32
    - ipBlock:
        cidr: 49.50.1.226/32
    - ipBlock:
        cidr: 49.50.1.228/32
    - ipBlock:
        cidr: 49.50.1.230/32
    - ipBlock:
        cidr: 49.50.1.232/32
    - ipBlock:
        cidr: 49.50.1.234/32
    - ipBlock:
        cidr: 49.50.1.236/32
    - ipBlock:
        cidr: 49.50.1.238/32
    - ipBlock:
        cidr: 49.50.1.240/32
    - ipBlock:
        cidr: 49.50.1.242/32
    - ipBlock:
        cidr: 49.50.1.244/32
    - ipBlock:
        cidr: 49.50.1.246/32
    - ipBlock:
        cidr: 49.50.1.248/32
    - ipBlock:
        cidr: 49.50.1.250/32
    - ipBlock:
        cidr: 49.50.1.252/32
    - ipBlock:
        cidr: 49.50.1.254/32
    - ipBlock:
        cidr: 49.50.2.0/32
    - ipBlock:
        cidr: 49.50.2.2/32
    - ipBlock:
        cidr: 49.50.2.4/32
    - ipBlock:
        cidr: 49.50.2.6/32
    - ipBlock:
        cidr: 49.50.2.8/32
    - ipBlock:
        cidr: 49.50.2.10/32
    - ipBlock:
        cidr: 49.50.2.12/32
    - ipBlock:
        cidr: 49.50.2.14/32
    - ipBlock:
        cidr: 49.50.2.16/32
    - ipBlock:
        cidr: 49.50.2.18/32
    - ipBlock:
        cidr: 49.50.2.20/32
    - ipBlock:
        cidr: 49.50.2.22/32
    - ipBlock:
        cidr: 49.50.2.24/32
    - ipBlock:
        cidr: 49.50.2.26/32
    - ipBlock:
        cidr: 49.50.2.28/32
    - ipBlock:
        cidr: 49.50.2.30/32
    - ipBlock:
        cidr: 49.50.2.32/32
    - ipBlock:
        cidr: 49.50.2.34/32
    - ipBlock:
        cidr: 49.50.2.36/32
    - ipBlock:
        cidr: 49.50.2.38/32
    - ipBlock:
        cidr: 49.50.2.40/32
    - ipBlock:
        cidr: 49.50.2.42/32
    - ipBlock:
        cidr: 49.50.2.44/32
    - ipBlock:
        cidr: 49.50.2.46/32
    - ipBlock:
        cidr: 49.50.2.48/32
    - ipBlock:
        cidr: 49.50.2.50/32
    - ipBlock:
        cidr: 49.50.2.52/32
    - ipBlock:
        cidr: 49.50.2.54/32
    - ipBlock:
        cidr: 49.50.2.56/32
    - ipBlock:
        cidr: 49.50.2.58/32
    - ipBlock:
        cidr: 49.50.2.60/32
    - ipBlock:
        cidr: 49.50.2.62/32
    - ipBlock:
        cidr: 49.50.2.64/32
    - ipBlock:
        cidr: 49.50.2.66/32
    - ipBlock:
        cidr: 49.50.2.68/32
    - ipBlock:
        cidr: 49.50.2.70/32
    - ipBlock:
        cidr: 49.50.2.72/32
    - ipBlock:
        cidr: 49.50.2.74/32
    - ipBlock:
        cidr: 49.50.2.76/32
    - ipBlock:
        cidr: 49.50.2.78/32
    - ipBlock:
        cidr: 49.50.2.80/32
    - ipBlock:
        cidr: 49.50.2.82/32
    - ipBlock:
        cidr: 49.50.2.84/32
    - ipBlock:
        cidr: 49.50.2.86/32
    - ipBlock:
        cidr: 49.50.2.88/32
    - ipBlock:
        cidr: 49.50.2.90/32
    - ipBlock:
        cidr: 49.50.2.92/32
    - ipBlock:
        cidr: 49.50.2.94/32
    - ipBlock:
        cidr: 49.50.2.96/32
    - ipBlock:
        cidr: 49.50.2.98/32
    - ipBlock:
        cidr: 49.50.2.100/32
    - ipBlock:
        cidr: 49.50.2.102/32
    - ipBlock:
        cidr: 49.50.2.104/32
    - ipBlock:
        cidr: 49.50.2.106/32
    - ipBlock:
        cidr: 49.50.2.108/32
    - ipBlock:
        cidr: 49.50.2.110/32
    - ipBlock:
        cidr: 49.50.2.112/32
    - ipBlock:
        cidr: 49.50.2.114/32
    - ipBlock:
        cidr: 49.50.2.116/32
    - ipBlock:
        cidr: 49.50.2.118/32
    - ipBlock:
        cidr: 49.50.2.120/32
    - ipBlock:
        cidr: 49.50.2.122/32
    - ipBlock:
        cidr: 49.50.2.124/32
    - ipBlock:
        cidr: 49.50.2.126/32
    - ipBlock:
        cidr: 49.50.2.128/32
    - ipBlock:
        cidr: 49.50.2.130/32
    - ipBlock:
        cidr: 49.50.2.132/32
    - ipBlock:
        cidr: 49.50.2.134/32
    - ipBlock:
        cidr: 49.50.2.136/32
    - ipBlock:
        cidr: 49.50.2.138/32
    - ipBlock:
        cidr: 49.50.2.140/32
    - ipBlock:
        cidr: 49.50.2.142/32
    - ipBlock:
        cidr: 49.50.2.144/32
    - ipBlock:
        cidr: 49.50.2.146/32
    - ipBlock:
        cidr: 49.50.2.148/32
    - ipBlock:
        cidr: 49.50.2.150/32
    - ipBlock:
        cidr: 49.50.2.152/32
    - ipBlock:
        cidr: 49.50.2.154/32
    - ipBlock:
        cidr: 49.50.2.156/32
    - ipBlock:
        cidr: 49.50.2.158/32
    - ipBlock:
        cidr: 49.50.2.160/32
    - ipBlock:
        cidr: 49.50.2.162/32
    - ipBlock:
        cidr: 49.50.2.164/32
    - ipBlock:
        cidr: 49.50.2.166/32
    - ipBlock:
        cidr: 49.50.2.168/32
    - ipBlock:
        cidr: 49.50.2.170/32
    - ipBlock:
        cidr: 49.50.2.172/32
    - ipBlock:
        cidr: 49.50.2.174/32
    - ipBlock:
        cidr: 49.50.2.176/32
    - ipBlock:
        cidr: 49.50.2.178/32
    - ipBlock:
        cidr: 49.50.2.180/32
    - ipBlock:
        cidr: 49.50.2.182/32
    - ipBlock:
        cidr: 49.50.2.184/32
    - ipBlock:
        cidr: 49.50.2.186/32
    - ipBlock:
        cidr: 49.50.2.188/32
    - ipBlock:
        cidr: 49.50.2.190/32
    - ipBlock:
        cidr: 49.50.2.192/32
    - ipBlock:
        cidr: 49.50.2.194/32
    - ipBlock:
        cidr: 49.50.2.196/32
    - ipBlock:
        cidr: 49.50.2.198/32
    - ipBlock:
        cidr: 49.50.2.200/32
    - ipBlock:
        cidr: 49.50.2.202/32
    - ipBlock:
        cidr: 49.50.2.204/32
    - ipBlock:
        cidr: 49.50.2.206/32
    - ipBlock:
        cidr: 49.50.2.208/32
    - ipBlock:
        cidr: 49.50.2.210/32
    - ipBlock:
        cidr: 49.50.2.212/32
    - ipBlock:
        cidr: 49.50.2.214/32
    - ipBlock:
        cidr: 49.50.2.216/32
    - ipBlock:
        cidr: 49.50.2.218/32
    - ipBlock:
        cidr: 49.50.2.220/32
    - ipBlock:
        cidr: 49.50.2.222/32
    - ipBlock:
        cidr: 49.50.2.224/32
    - ipBlock:
        cidr: 49.50.2.226/32
    - ipBlock:
        cidr: 49.50.2.228/32
    - ipBlock:
        cidr: 49.50.2.230/32
    - ipBlock:
        cidr: 49.50.2.232/32
    - ipBlock:
        cidr: 49.50.2.234/32
    - ipBlock:
        cidr: 49.50.2.236/32
    - ipBlock:
        cidr: 49.50.2.238/32
    - ipBlock:
        cidr: 49.50.2.240/32
    - ipBlock:
        cidr: 49.50.2.242/32
    - ipBlock:
        cidr: 49.50.2.244/32
    - ipBlock:
        cidr: 49.50.2.246/32
    - ipBlock:
        cidr: 49.50.2.248/32
    - ipBlock:
        cidr: 49.50.2.250/32
    - ipBlock:
        cidr: 49.50.2.252/32
    - ipBlock:
        cidr: 49.50.2.254/32
    - ipBlock:
        cidr: 49.50.3.0/32
    - ipBlock:
        cidr: 49.50.3.2/32
    - ipBlock:
        cidr: 49.50.3.4/32
    - ipBlock:
        cidr: 49.50.3.6/32
    - ipBlock:
        cidr: 49.50.3.8/32
    - ipBlock:
        cidr: 49.50.3.10/32
    - ipBlock:
        cidr: 49.50.3.12/32
    - ipBlock:
        cidr: 49.50.3.14/32
    - ipBlock:
        cidr: 49.50.3.16/32
    - ipBlock:
        cidr: 49.50.3.18/32
    - ipBlock:
        cidr: 49.50.3.20/32
    - ipBlock:
        cidr: 49.50.3.22/32
    - ipBlock:
        cidr: 49.50.3.24/32
    - ipBlock:
        cidr: 49.50.3.26/32
    - ipBlock:
        cidr: 49.50.3.28/32
    - ipBlock:
        cidr: 49.50.3.30/32
    - ipBlock:
        cidr: 49.50.3.32/32
    - ipBlock:
        cidr: 49.50.3.34/32
    - ipBlock:
        cidr: 49.50.3.36/32
    - ipBlock:
        cidr: 49.50.3.38/32
    - ipBlock:
        cidr: 49.50.3.40/32
    - ipBlock:
        cidr: 49.50.3.42/32
    - ipBlock:
        cidr: 49.50.3.44/32
    - ipBlock:
        cidr: 49.50.3.46/32
    - ipBlock:
        cidr: 49.50.3.48/32
    - ipBlock:
        cidr: 49.50.3.50/32
    - ipBlock:
        cidr: 49.50.3.52/32
    - ipBlock:
        cidr: 49.50.3.54/32
    - ipBlock:
        cidr: 49.50.3.56/32
    - ipBlock:
        cidr: 49.50.3.58/32
    - ipBlock:
        cidr: 49.50.3.60/32
    - ipBlock:
        cidr: 49.50.3.62/32
    - ipBlock:
        cidr: 49.50.3.64/32
    - ipBlock:
        cidr: 49.50.3.66/32
    - ipBlock:
        cidr: 49.50.3.68/32
    - ipBlock:
        cidr: 49.50.3.70/32
    - ipBlock:
        cidr: 49.50.3.72/32
    - ipBlock:
        cidr: 49.50.3.74/32
    - ipBlock:
        cidr: 49.50.3.76/32
    - ipBlock:
        cidr: 49.50.3.78/32
    - ipBlock:
        cidr: 49.50.3.80/32
    - ipBlock:
        cidr: 49.50.3.82/32
    - ipBlock:
        cidr: 49.50.3.84/32
    - ipBlock:
        cidr: 49.50.3.86/32
    - ipBlock:
        cidr: 49.50.3.88/32
    - ipBlock:
        cidr: 49.50.3.90/32
    - ipBlock:
        cidr: 49.50.3.92/32
    - ipBlock:
        cidr: 49.50.3.94/32
    - ipBlock:
        cidr: 49.50.3.96/32
    - ipBlock:
        cidr: 49.50.3.98/32
    - ipBlock:
        cidr: 49.50.3.100/32
    - ipBlock:
        cidr: 49.50.3.102/32
    - ipBlock:
        cidr: 49.50.3.104/32
    - ipBlock:
        cidr: 49.50.3.106/32
    - ipBlock:
        cidr: 49.50.3.108/32
    - ipBlock:
        cidr: 49.50.3.110/32
    - ipBlock:
        cidr: 49.50.3.112/32
    - ipBlock:
        cidr: 49.50.3.114/32
    - ipBlock:
        cidr: 49.50.3.116/32
    - ipBlock:
        cidr: 49.50.3.118/32
    - ipBlock:
        cidr: 49.50.3.120/32
    - ipBlock:
        cidr: 49.50.3.122/32
    - ipBlock:
        cidr: 49.50.3.124/32
    - ipBlock:
        cidr: 49.50.3.126/32
    - ipBlock:
        cidr: 49.50.3.128/32
    - ipBlock:
        cidr: 49.50.3.130/32
    - ipBlock:
        cidr: 49.50.3.132/32
    - ipBlock:
        cidr: 49.50.3.134/32
    - ipBlock:
        cidr: 49.50.3.136/32
    - ipBlock:
        cidr: 49.50.3.138/32
    - ipBlock:
        cidr: 49.50.3.140/32
    - ipBlock:
        cidr: 49.50.3.142/32
    - ipBlock:
        cidr: 49.50.3.144/32
    - ipBlock:
        cidr: 49.50.3.146/32
    - ipBlock:
        cidr: 49.50.3.148/32
    - ipBlock:
        cidr: 49.50.3.150/32
    - ipBlock:
        cidr: 49.50.3.152/32
    - ipBlock:
        cidr: 49.50.3.154/32
    - ipBlock:
        cidr: 49.50.3.156/32
    - ipBlock:
        cidr: 49.50.3.158/32
    - ipBlock:
        cidr: 49.50.3.160/32
    - ipBlock:
        cidr: 49.50.3.162/32
    - ipBlock:
        cidr: 49.50.3.164/32
    - ipBlock:
        cidr: 49.50.3.166/32
    - ipBlock:
        cidr: 49.50.3.168/32
    - ipBlock:
        cidr: 49.50.3.170/32
    - ipBlock:
        cidr: 49.50.3.172/32
    - ipBlock:
        cidr: 49.50.3.174/32
    - ipBlock:
        cidr: 49.50.3.176/32
    - ipBlock:
        cidr: 49.50.3.178/32
    - ipBlock:
        cidr: 49.50.3.180/32
    - ipBlock:
        cidr: 49.50.3.182/32
    - ipBlock:
        cidr: 49.50.3.184/32
    - ipBlock:
        cidr: 49.50.3.186/32
    - ipBlock:
        cidr: 49.50.3.188/32
    - ipBlock:
        cidr: 49.50.3.190/32
    - ipBlock:
        cidr: 49.50.3.192/32
    - ipBlock:
        cidr: 49.50.3.194/32
    - ipBlock:
        cidr: 49.50.3.196/32
    - ipBlock:
        cidr: 49.50.3.198/32
    - ipBlock:
        cidr: 49.50.3.200/32
    - ipBlock:
        cidr: 49.50.3.202/32
    - ipBlock:
        cidr: 49.50.3.204/32
    - ipBlock:
        cidr: 49.50.3.206/32
    - ipBlock:
        cidr: 49.50.3.208/32
    - ipBlock:
        cidr: 49.50.3.210/32
    - ipBlock:
        cidr: 49.50.3.212/32
    - ipBlock:
        cidr: 49.50.3.214/32
    - ipBlock:
        cidr: 49.50.3.216/32
    - ipBlock:
        cidr: 49.50.3.218/32
    - ipBlock:
        cidr: 49.50.3.220/32
    - ipBlock:
        cidr: 49.50.3.222/32
    - ipBlock:
        cidr: 49.50.3.224/32
    - ipBlock:
        cidr: 49.50.3.226/32
    - ipBlock:
        cidr: 49.50.3.228/32
    - ipBlock:
        cidr: 49.50.3.230/32
    - ipBlock:
        cidr: 49.50.3.232/32
    - ipBlock:
        cidr: 49.50.3.234/32
    - ipBlock:
        cidr: 49.50.3.236/32
    - ipBlock:
        cidr: 49.50.3.238/32
    - ipBlock:
        cidr: 49.50.3.240/32
    - ipBlock:
        cidr: 49.50.3.242/32
    - ipBlock:
        cidr: 49.50.3.244/32
    - ipBlock:
        cidr: 49.50.3.246/32
    - ipBlock:
        cidr: 49.50.3.248/32
    - ipBlock:
        cidr: 49.50.3.250/32
    - ipBlock:
        cidr: 49.50.3.252/32
    - ipBlock:
        cidr: 49.50.3.254/32
    - ipBlock:
        cidr: 49.50.4.0/32
    - ipBlock:
        cidr: 49.50.4.2/32
    - ipBlock:
        cidr: 49.50.4.4/32
    - ipBlock:
        cidr: 49.50.4.6/32
    - ipBlock:
        cidr: 49.50.4.8/32
    - ipBlock:
        cidr: 49.50.4.10/32
    - ipBlock:
        cidr: 49.50.4.12/32
    - ipBlock:
        cidr: 49.50.4.14/32
    - ipBlock:
        cidr: 49.50.4.16/32
    - ipBlock:
        cidr: 49.50.4.18/32
    - ipBlock:
        cidr: 49.50.4.20/32
    - ipBlock:
        cidr: 49.50.4.22/32
    - ipBlock:
        cidr: 49.50.4.24/32
    - ipBlock:
        cidr: 49.50.4.26/32
    - ipBlock:
        cidr: 49.50.4.28/32
    - ipBlock:
        cidr: 49.50.4.30/32
    - ipBlock:
        cidr: 49.50.4.32/32
    - ipBlock:
        cidr: 49.50.4.34/32
    - ipBlock:
        cidr: 49.50.4.36/32
    - ipBlock:
        cidr: 49.50.4.38/32
    - ipBlock:
        cidr: 49.50.4.40/32
    - ipBlock:
        cidr: 49.50.4.42/32
    - ipBlock:
        cidr: 49.50.4.44/32
    - ipBlock:
        cidr: 49.50.4.46/32
    - ipBlock:
        cidr: 49.50.4.48/32
    - ipBlock:
        cidr: 49.50.4.50/32
    - ipBlock:
        cidr: 49.50.4.52/32
    - ipBlock:
        cidr: 49.50.4.54/32
    - ipBlock:
        cidr: 49.50.4.56/32
    - ipBlock:
        cidr: 49.50.4.58/32
    - ipBlock:
        cidr: 49.50.4.60/32
